[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
httparse = "1.10.1"
markdown = "1.0.0"
notify = "8.2.0"
postcard = {version="1.1.3", features=["postcard-derive", "use-std", "alloc"]}
serde = {version="1.0.228", features=["serde_derive"]}
uuid = {version="1.21.0", features=["v5"]}
