[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
# Live-reload HTTP server.
httparse = "1.10.1"
# Parse .md files.
markdown = "1.0.0"
# Optimize cache.
nohash-hasher = "0.2.0"
# Watch files.
notify = "8.2.0"
# Search index.
postcard = {version="1.1.3", features=["postcard-derive", "use-std", "alloc"]}
# Search index.
serde = {version="1.0.228", features=["serde_derive"]}
# RSS feed.
uuid = {version="1.21.0", features=["v5"]}
